syntax = "proto3";

package NAlice.NData.NMusic;
option go_package = "a.yandex-team.ru/alice/protos/data/scenario/music";
option java_package = "ru.yandex.alice.protos.data.scenario.music";

import "mapreduce/yt/interface/protos/extension.proto";

message TUserConfig {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    bool AnnounceTracks = 1 [json_name = "announce_tracks", (NYT.column_name) = "announce_tracks"];
}
